--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="swiper-slide-caption">
       <div class="container container-wide">
         <h1 class="h1 h1--mod brand white">perfect<span class="italic text-danger">o</span></h1>
-        <p class="lead white">Book a room at our hotel now and get a discount of 30%</p>
+        <p class="lead white">Book30%</p>
         <a href="#" class="btn btn-sm btn-danger">Order Now!</a>
       </div>
     </div>
